// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display bubbles 1`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={45}
      style={
        {
          "fill": "blue",
          "stroke": "blue",
        }
      }
      transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
    />
  </a>
</Tooltip>
`;

exports[`should display bubbles 2`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={33.57142857142858}
      style={
        {
          "fill": "red",
          "stroke": "red",
        }
      }
      transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
    />
  </a>
</Tooltip>
`;

exports[`should render bubble links 1`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={45}
      style={
        {
          "fill": "blue",
          "stroke": "blue",
        }
      }
      transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
    />
  </a>
</Tooltip>
`;

exports[`should render bubble links 2`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={33.57142857142858}
      style={
        {
          "fill": "green",
          "stroke": "green",
        }
      }
      transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
    />
  </a>
</Tooltip>
`;

exports[`should render bubbles with click handlers 1`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={45}
      style={
        {
          "fill": "blue",
          "stroke": "blue",
        }
      }
      transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
    />
  </a>
</Tooltip>
`;

exports[`should render bubbles with click handlers 2`] = `
<Tooltip>
  <a
    href="#"
    onClick={[Function]}
  >
    <circle
      className="bubble-chart-bubble"
      r={33.57142857142858}
      style={
        {
          "fill": "red",
          "stroke": "red",
        }
      }
      transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
    />
  </a>
</Tooltip>
`;
